fix(main): correction spacing for structure button

--- a/src/components/MainPage/MainPage.module.css
+++ b/src/components/MainPage/MainPage.module.css
@@ -41,14 +41,6 @@
 
 }
 
-@media (min-width: 1024px) {
-    .info {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-column-gap: 58px;
-    }
-}
-
 .goalsList, .nowList {
     display: flex;
     flex-wrap: wrap;
@@ -108,20 +100,6 @@
     }
 }
 
-@media (min-width: 1024px) {
-    .goals, .now {
-        display: contents;
-    }
-
-    .goalsList, .nowList {
-        display: contents;
-    }
-
-    .numbers, .goal {
-        max-width: inherit;
-    }
-}
-
 .goalTrademark::before {
     background-image: url("./keys/trademark.svg");
 }
@@ -139,6 +117,28 @@
 }
 
 @media (min-width: 1024px) {
+    .info {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-column-gap: 58px;
+    }
+
+    .numbers {
+        margin-bottom: 0;
+    }
+
+    .goals, .now {
+        display: contents;
+    }
+
+    .goalsList, .nowList {
+        display: contents;
+    }
+
+    .numbers, .goal {
+        max-width: none;
+    }
+
     .structureButton {
         display: contents;
     }
